--- a/lularizer-wireframe/index.html
+++ b/lularizer-wireframe/index.html
@@ -23,7 +23,7 @@
 <span class="mdl-layout__title">LuLaRizer</span>
 <nav class="mdl-navigation">
 <a class="mdl-navigation__link" href="new" onclick="location='new'; return false; ">Add From Camera</a>
-<a class="mdl-navigation__link" href="#" onclick="return false; ">Add From Collection</a>
+<a class="mdl-navigation__link" href="#" onclick="location='collection'; return false; ">Add From Collection</a>
 <a class="mdl-navigation__link" href="inventory" onclick="location='inventory'; return false; ">Browse Inventory</a>
 <a class="mdl-navigation__link" href="#" onclick="return false; ">Inventory Audit</a>
 <a class="mdl-navigation__link" href="#" onclick="return false; ">Upload to Facebook</a>
