added all main pages

--- a/lularizer-wireframe/index.html
+++ b/lularizer-wireframe/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<title>Lularizer Wireframe</title>
+<title>Lularizer</title>
 <link rel="stylesheet" href="mdl/material.lime-pink.min.css">
 <script src="mdl/material.min.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -25,8 +25,8 @@
 <a class="mdl-navigation__link" href="new" onclick="location='new'; return false; ">Add From Camera</a>
 <a class="mdl-navigation__link" href="#" onclick="location='collection'; return false; ">Add From Collection</a>
 <a class="mdl-navigation__link" href="inventory" onclick="location='inventory'; return false; ">Browse Inventory</a>
-<a class="mdl-navigation__link" href="#" onclick="return false; ">Inventory Audit</a>
-<a class="mdl-navigation__link" href="#" onclick="return false; ">Upload to Facebook</a>
+<a class="mdl-navigation__link" href="#" onclick="location='audit'; return false; ">Inventory Audit</a>
+<a class="mdl-navigation__link" href="#" onclick="location='upload'; return false; ">Upload to Facebook</a>
 </nav>
 </div>
 
