--- a/lularizer-wireframe/collection.html
+++ b/lularizer-wireframe/collection.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<title>Lularize Wireframe</title>
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<title>Inventory</title>
+<title>Add To Inventory</title>
 <link rel="stylesheet" href="mdl/material.lime-pink.min.css">
 <script src="mdl/material.min.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -24,7 +23,7 @@ h3 {
 
 <header class="mdl-layout__header">
 <div class="mdl-layout__header-row">
-<span class="mdl-layout__title"><a href="/lularizer-wireframe/">LuLaRizer</a></span>
+<span class="mdl-layout__title"><a href="/lularizer-wireframe/">Add To Inventory</a></span>
 </div>
 </header>
 
@@ -34,8 +33,8 @@ h3 {
 <a class="mdl-navigation__link" href="new" onclick="location='new'; return false; ">Add From Camera</a>
 <a class="mdl-navigation__link" href="#" onclick="location='collection'; return false; ">Add From Collection</a>
 <a class="mdl-navigation__link" href="inventory" onclick="location='inventory'; return false; ">Browse Inventory</a>
-<a class="mdl-navigation__link" href="#" onclick="return false; ">Inventory Audit</a>
-<a class="mdl-navigation__link" href="#" onclick="return false; ">Upload to Facebook</a>
+<a class="mdl-navigation__link" href="#" onclick="location='audit'; return false; ">Inventory Audit</a>
+<a class="mdl-navigation__link" href="#" onclick="location='upload'; return false; ">Upload to Facebook</a>
 </nav>
 </div>
 
