--- a/lularizer-wireframe/edit.html
+++ b/lularizer-wireframe/edit.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<title>Lularize Wireframe</title>
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<title>Label Photo</title>
 <link rel="stylesheet" href="mdl/material.lime-pink.min.css">
 <script src="mdl/material.min.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -45,7 +45,7 @@ footer p {margin: 1em 0; }
 
 <header class="mdl-layout__header">
 <div class="mdl-layout__header-row">
-<span class="mdl-layout__title"><a href="/lularizer-wireframe/">LuLaRizer</a></span>
+<span class="mdl-layout__title"><a href="/lularizer-wireframe/">Label Photo</a></span>
 </div>
 </header>
 
@@ -55,8 +55,8 @@ footer p {margin: 1em 0; }
 <a class="mdl-navigation__link" href="new" onclick="location='new'; return false; ">Add From Camera</a>
 <a class="mdl-navigation__link" href="#" onclick="location='collection'; return false; ">Add From Collection</a>
 <a class="mdl-navigation__link" href="inventory" onclick="location='inventory'; return false; ">Browse Inventory</a>
-<a class="mdl-navigation__link" href="#" onclick="return false; ">Inventory Audit</a>
-<a class="mdl-navigation__link" href="#" onclick="return false; ">Upload to Facebook</a>
+<a class="mdl-navigation__link" href="#" onclick="location='audit'; return false; ">Inventory Audit</a>
+<a class="mdl-navigation__link" href="#" onclick="location='upload'; return false; ">Upload to Facebook</a>
 </nav>
 </div>
 
